# fsr

./: .gitignore  Cargo.toml  Dockerfile  Justfile  Makefile
_content/: biographie.md  contact.md  expositions.md  gallery.csv  gallery.xlsx
_content/pages/: biographie.md  expositions.md
_data/static/javascripts/: app.min.js
_data/static/stylesheets/: app.css  foundation.min.css
_data/templates/: base.html  index.html  not_found.html  page.html  theme.html  virtual_expo.html
_site/: .gitignore
_site/content/pages/: contact.md  expositions.md
_site/static/javascripts/: app.js
_site/static/stylesheets/: app.css  foundation.css
_site/templates/: base.html  base.html.tera  gallery.hamlet  index.html.tera  not_found.html.tera  page.html.tera  theme.html  theme.html.tera  virtual_expo.html
_static/: app.css  jquery.cycle2.min.js  jquery.js
_static/Colaborate/: stylesheet.css
_static/stylesheets/: app.css
src/: data.rs  db.rs  fairings.rs  load.rs  main.rs  prelude.rs  serve.rs  watch.rs
src/routes/: get_image.rs  get_index.rs  get_page.rs  get_theme.rs  get_thumbnail.rs  get_virtual_expo.rs  index.rs  mod.rs  not_found.rs
templates/: base.html  base.html.tera  index.hamlet  index.html  index.html.tera  page.html.tera
