[package]
name    = "fsr"
version = "0.1.0"
authors = ["Romain Ruetschi <romain.ruetschi@gmail.com>"]
edition = "2018"

[dependencies]
async-std     = { version = "1.8.0", features = ["attributes", "unstable"] }
arc-swap      = "1.6"
comrak        = "0.18"
csv-async     = "1.2"
derive_more   = "0.99"
frontmatter   = "0.4"
futures       = "0.3"
itertools     = "0.10"
notify        = "5.1"
once_cell     = "1"
serde         = "1"
serde_derive  = "1"
slug          = "0.1"
tera          = "1.18"
tide          = "0.16"
tide-compress = "0.11"
tide-tera     = "0.2"
yaml-rust     = "0.4"
