[package]
name    = "fsr"
version = "0.1.0"
authors = ["Romain Ruetschi <romain.ruetschi@gmail.com>"]
edition = "2018"

[dependencies]
arc-swap           = "1.6"
axum               = "0.6.18"
axum-template      = { version = "0.16.0", features = ["tera"] }
comrak             = "0.18"
csv-async          = { version = "1.2", features = ["tokio"] }
ctrlc = { version = "3.3.0", features = ["termination"] }
derive_more        = "0.99"
frontmatter        = "0.4"
futures            = "0.3"
itertools          = "0.10"
mime_guess         = "2.0.4"
notify             = "6"
once_cell          = "1"
serde = { version = "1", features = ["derive"] }
serde_derive       = "1"
slug               = "0.1"
tera               = "1.18"
tokio              = { version = "1.28.0", features = ["macros", "net", "rt", "parking_lot", "fs", "signal", "sync"] }
tower-http         = { version = "0.4.0", features = ["compression-gzip", "trace"] }
tracing            = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
yaml-rust          = "0.4"
